Fix z-index and animation (#15402)

--- a/src/sass/base/_constants.scss
+++ b/src/sass/base/_constants.scss
@@ -26,6 +26,7 @@ $footerHeight: 7rem;
 $modal-z: 110;
 $header-z: 100;
 $overlay-z: 75;
+$hero-text-z: 70;
 $sidebar-z: 50;
 $banner-z: 20;
 $floating-button-z: 15;
